# HSTA-Framework

./: .gitignore  README.md  data_loader.py  evaluate.py  flask_app.py  inference.py  pyproject.toml  requirements.txt  train.py
models/: attention_module.py  feature_extractor.py  hybrid_summarizer.py
static/css/: style.css
static/js/: app.js
templates/: index.html
utils/: audio_extractor.py  summarizer.py
