[project]
name = "ann"
version = "0.1.0"
description = "HSTA Video Framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "opencv-python",
    "Pillow",
    "transformers",
    "librosa",
    "moviepy",
    "scipy",
    "werkzeug",
    "ids"
]
